
Bug fixes:

New features:

 - In `XLregresSummary`, the CI and p-value calculations are now linked, and controlled via the `df` argument. So there are now only 2 options, Normal (default) and T (if `df` is a positive number), vs. unlimited but annoying before. Naturally, the arguments `pfun` and `confac` are now gone.
 - Introduced `niceRound', proper-rounding utility useful beyond this package
 - Added Yihui's "roxygenize hack" to DESCRIPTION, to enable full help files when installing from GitHub


Version 0.3.2 Release Notes (summer 2016) 
==============================

Bug fixes:

- Added `iqrString` to the the exported functions

New features:

- `XLtwoWay` can now do the percents in parentheses next to counts, like `XLoneWay`; actually it's the default. You can still also do side-by-side, or drop the percents.
- All(?) rounding is now wrapped by `format()` to make sure the actual requested number of digits is showing, rather than R/Excel's annoying "feature" of rounding it further for you in case your number happens to be roundish.
- In `XLregresSummary`, a p-value previously rounded down to zero, will now show as "<p_0", with p_0 being the smallest positive number one could round to (default: "<0.001" because `pround=3`).
- In `XLoneWay` and `XLtwoWay`, I bumped the default n value for switching between rounding to whole percents or leaving one decimal digit, from 200 to 500 based on experience. Of course, you can control the rounding directly via `digits`.


Version 0.3.1 Release Notes (early summer 2014) 
==============================

Bug fixes:

- Added automatic file-saving to `XLgeneric` (as promised by help text)
- `row1,col1` are now "as advertised", i.e. the export really begins at the cell you tell it to (in some functions it was only "approximate").
- Removed some outdated text from help pages.

New features:
