@@ -16,10 +16,11 @@ XLtwoWay(book3,"PartnersAKQcounts",cut(hand1,c(0,2:6,14)-0.5),cut(hand2,c(0,2:5,
          colNames=c(handNames,"Total"),header=TRUE)
 
 ## Same table, but percents now condition on columns rather than rows, 
-## counts/pct header row removed - but a title added:
+## counts/pct header row removed - but a title added.
+## Also, Chi-square p-value now placed below the table rather than the default top-right corner
 XLtwoWay(book3,"PartnersAKQcounts",cut(hand1,c(0,2:6,14)-0.5),cut(hand2,c(0,2:5,14)-0.5),
          rowTitle="AKQ's in Hand 1 (rows) vs. Hand 2",rowNames=c(handNames[-5],5,"6 or more","Total"),
          colNames=c(handNames,"Total"),header=FALSE,row1=12,sumby=2,
-         title="Now Percents are Summed by Column:")
+         title="Now Percents are Summed by Column:",testBelow=TRUE)
 
 cat("Look for",paste(getwd(),"hands.xls",sep='/'),"to see the results!\n")
